<resources>
    <string name="app_name">榴莲牛奶Note</string>


    <string name="motto">签名</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="birth">生日</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="editmyinfo">编辑资料</string>
    <string name="head">头像</string>

    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="verifyRequest">验证请求</string>
    <string name="send">发送</string>
    <string name="youNeedVerify">你需要发送验证申请，等对方通过</string>
    <string name="personalinfo">个人资料</string>
    <string name="district">地区</string>
    <string name="addFriend">添加好友</string>
    <string name="add_virtual_friend">添加虚拟好友</string>
    <string name="add_sure">确认添加</string>
    <string name="alias_input">请输入昵称</string>
    <string name="setup">设置</string>
    <string name="background">背景设置</string>
    <string name="contact_us">联系我们</string>
    <string name="quit">退出登录</string>
    <string name="alias">昵称</string>

    <string name="connect">关联</string>

    <!--<string name="app_name">XRichText</string>-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="number">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="registerNow">立即注册</string>
    <string name="new_user">新用户注册</string>
    <string name="login">登录</string>
    <string name="welcome">欢迎注册</string>
    <string name="accompany">三百六十五个日夜，有我陪伴。</string>
    <string name="phone">手机号</string>
    <string name="identifying_code">获取验证码</string>
    <string name="verify_code">验证码</string>


</resources>
