<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_passwordMis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_checkMis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/et_passwordCheck"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_passwordCheck"
        app:layout_constraintTop_toBottomOf="@+id/et_passwordCheck" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/blue"
        android:text="@string/registerNow"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btn_verify"
        app:layout_constraintStart_toStartOf="@+id/et_verify"
        app:layout_constraintTop_toBottomOf="@+id/btn_verify"
        app:layout_constraintVertical_bias="0.232" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/tv_accompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/accompany"
        app:layout_constraintLeft_toLeftOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_accompany" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/et_phone"
        app:layout_constraintRight_toRightOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_phoneMis" />

    <EditText
        android:id="@+id/et_passwordCheck"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="确认密码"
        android:inputType="textPassword"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_passwordMis" />

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:text="@string/identifying_code"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_passwordCheck"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkMis"/>

    <EditText
        android:id="@+id/et_verify"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/et_bg"
        android:ems="10"
        android:hint="@string/verify_code"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/btn_verify"
        app:layout_constraintEnd_toStartOf="@+id/btn_verify"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_passwordMis"
        app:layout_constraintTop_toTopOf="@+id/btn_verify"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_phoneMis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/et_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

</android.support.constraint.ConstraintLayout>
