<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_toolbar"
        android:orientation="vertical"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="bottom" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/background"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/background"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/TextGray"
                    android:textSize="14sp"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact_us"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:text="@string/contact_us"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_contact_us"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/TextGray"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:padding="10dp"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/right" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/bt_quit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_quit"
                android:textColor="@color/white"
                android:text="@string/quit"
                android:textSize="15sp"/>




        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>