<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_toolbar"
        android:orientation="vertical"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="bottom" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verifyRequest"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="bottom"/>

                <TextView
                    android:id="@+id/tv_send"
                    android:text="@string/send"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="10dp"/>
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/youNeedVerify"
                android:textSize="13sp"
                android:textColor="@color/TextGray"/>
            <EditText
                android:id="@+id/et_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:textCursorDrawable="@drawable/cursor_blue"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:maxLines="5"
                android:maxLength="10"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray3"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray3"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray3"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/gray4"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>