<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_toolbar"
        android:orientation="vertical"
        android:fitsSystemWindows="true">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="bottom" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personalinfo"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="bottom"/>
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray4"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="20dp">

                <com.in.timelinenested.viewClass.CircleImageView
                    android:id="@+id/civ_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/head" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/civ_image"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_sexAndAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_below="@id/tv_name"
                    android:layout_toEndOf="@id/civ_image" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/alias"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_alias"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/TextGray"
                    android:textSize="14sp"
                    android:padding="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.01dp"
                android:background="@color/gray3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/white">
                <TextView
                    android:text="@string/birth"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:id="@+id/tv_birth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/TextGray"
                    android:textSize="14sp"
                    android:maxLines="2"
                    android:padding="10dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_addFriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addFriend"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>